# thales

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .version  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Doxyfile  LICENSE  README.md  build_log.txt  cmake_debug_log.txt  conanfile.py  graph_legend.html  index.html  test_build_log.txt  test_cmake_deps.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yaml
.github/workflows/: 00-build.yaml  10-clang-format.yaml  10-clang-tidy.yaml  10-cppcheck.yaml  10-static-analysis.yaml  20-benchmark.yaml  20-code-coverage.yaml  20-test.yaml  30-security-scan.yaml  40-docker-publish.yaml  40-docker-test.yaml  40-terraform-deploy.yaml  50-documentation.yaml  90-dependency-update.yaml  90-pr-validation.yaml  90-release.yaml  README.md  benchmark.yml  build.yaml  build.yml  clang-format.yml  clang-tidy.yaml  clang-tidy.yml  code-coverage.yaml  code-coverage.yml  codeql-analysis.yaml  codeql-analysis.yml  cppcheck.yaml  cppcheck.yml  cross-platform.yaml  cross-platform.yml  dependency-check.yaml  dependency-check.yml  dependency-update.yaml  dependency-update.yml  docker-build.yaml  docker-build.yml  docker-publish.yaml  docker-publish.yml  docker-test.yaml  (+17 more)
backtesting/python/: setup.py
backtesting/python/src/thales_backtester/backtest/: engine.py
backtesting/python/src/thales_backtester/models/: black_scholes.py
benchmarks/: CMakeLists.txt  benchmark_black_scholes_model.cpp  benchmark_black_scholes_model_vectorized.cpp
build2/: thales
build2/tests/: thales_tests
cmake/: README.md
cmake/modules/: FindIBAPI.cmake  FindLibPQXX.cmake  SetCompilerFlags.cmake
cmake/packaging/: cpack_config.cmake
config/: CONFIG.md  config.json  config.yaml  thales-config.cmake.in
docker/: .env  Dockerfile  Dockerfile.deps  Dockerfile.dev  Dockerfile.final  Dockerfile.prod  Dockerfile.simple  Dockerfile.test  docker-compose.yaml  docker-compose.yml  entrypoint.sh  full_build_log.txt
docker/prometheus/: prometheus.yaml
examples/: black_scholes_example.cpp
include/thales/core/: contract.hpp  engine.h  engine.hpp  option.hpp  order.h  order.hpp  portfolio.h  portfolio.hpp  position.h  position.hpp  risk_manager.h  risk_manager.hpp
include/thales/data/: data_manager.h  data_manager.hpp  ib_client.h  ib_client.hpp  ib_contract.hpp  ib_order.hpp  ib_wrapper.hpp  market_data.h  market_data.hpp
include/thales/models/: black_scholes.h  black_scholes.hpp  black_scholes_model.hpp  black_scholes_model_vectorized.hpp  monte_carlo_model.hpp
include/thales/strategies/: black_scholes.h  black_scholes.hpp  black_scholes_arbitrage.h  black_scholes_arbitrage.hpp  strategy_base.h  strategy_base.hpp  strategy_registry.h  strategy_registry.hpp
include/thales/utils/: config.h  config.hpp  db_logger.h  db_logger.hpp  hardware_info.hpp  logger.h  logger.hpp  symbol_lookup.hpp
proto/: ExecutionFilter.pb.h  ExecutionRequest.pb.h
python/: CMakeLists.txt  PYTHON.md
python/examples/: black_scholes_backtest_example.py
python/src/thales_backtester/bindings/: bindings.cpp  models_bindings.cpp  strategies_bindings.cpp
python/src/thales_backtester/data/: data_loader.py
python/src/thales_backtester/strategies/: black_scholes_arbitrage.py
scripts/: build.sh  docker_stop.sh  format.sh  install_ibapi.sh  run_benchmarks.sh  test.sh  test_asan.sh
scripts/asan/: build_with_asan.sh  test_with_asan.sh
scripts/database/: setup_postgres.sh
scripts/depends/: install_libpqxx.sh  install_postgres.sh
scripts/docker/: docker_start.sh  docker_stop.sh  test_docker_image.sh  update_ubuntu_version.sh
scripts/docs/: generate_docs.sh
scripts/documentation/: generate_docs.sh
scripts/quality/: lint.sh
scripts/test/: coverage.sh  run_with_asan.sh
src/: main.cpp  main.rs  option.rs
src/core/: engine.cpp  order.cpp  portfolio.cpp  position.cpp  risk_manager.cpp
src/data/: data_manager.cpp  ib_client.cpp  ib_contract.cpp  ib_order.cpp  ib_wrapper.cpp
src/models/: black_scholes.cpp  black_scholes_model.cpp  black_scholes_model_vectorized.cpp  monte_carlo_model.cpp
src/strategies/: black_scholes.cpp  black_scholes_arbitrage.cpp  strategy_base.cpp  strategy_registry.cpp
src/utils/: config.cpp  db_logger.cpp  logger.cpp  symbol_lookup.cpp
terraform/: README.md  TERRAFORM.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: CMakeLists.txt  test_black_scholes.cpp  test_black_scholes_model.cpp
tests/core/: test_contract.cpp  test_order.cpp  test_portfolio.cpp  test_position.cpp
tests/data/: test_ib_client.cpp
tests/models/: test_black_scholes_model.cpp  test_black_scholes_model_greeks.cpp  test_black_scholes_model_vectorized.cpp  test_monte_carlo_model.cpp
tests/utils/: test_symbol_lookup.cpp
