[package]
name = "thales"
version = "0.1.0"
edition = "2021"
authors = ["Cody Michael Jones <codymjones@pm.me>"]
description = "An algorithmic options trading bot"
license = "MIT"
repository = "https://github.com/cm-jones/thales"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
